# pycobertura-test

./: .coveragerc  .gitignore  README.md  pyproject.toml  pytest.ini
.github/workflows/: main.yml
pycobertura_test/: add.py  aws_utils.py  dummy_square.py  dummy_utils.py
tests/: conftest.py  test_add.py  test_aws_utils.py  test_dummy_square.py  test_requests.py
