[tool.poetry]
name = "pycobertura-test"
version = "0.1.0"
description = ""
authors = ["goatwu1993 <peteeelol@gmail.com>"]
readme = "README.md"
packages = [{include = "pycobertura_test"}]

[tool.poetry.dependencies]
python = "^3.8"
boto3 = "^1.26.108"
requests = "^2.28.2"


[tool.poetry.group.dev.dependencies]
moto = "^4.1.6"
pytest = "^7.2.2"
responses = "^0.23.1"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
